--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -1,47 +1,49 @@
 
-    <div class="sidebar">
-        <!-- Logo -->
-        <div class="sidbarLogo">
-            <img src="/assets/img/logo-white.svg" alt="logo">
-        </div>
-        <!-- Menu -->
-        <div class="sidebarLinks">
-            <div class="sidebarCategory"onclick="changeContent(this)">
-                <a href="/summary.html">
-                    <div class="sidebarLink">
-                        <img src="/assets/img/Icons_summary.png">
-                        <div class="sidebarMenuText">Summary</div>
-                    </div>
-                </a>
+    <div class="box-sizing">
+        <div class="sidebar">
+            <!-- Logo -->
+            <div class="sidbarLogo">
+                <img src="/assets/img/logo-white.svg" alt="logo">
             </div>
-            <div class="sidebarCategory" onclick="changeContent(this)">
-                  <a href="/add_task.html">
-                    <div class="sidebarLink">
-                        <img src="/assets/img/Icons_add_task.png">
-                        <div class="sidebarMenuText">Add Task</div>
-                    </div>
-                </a>
+            <!-- Menu -->
+            <div class="sidebarLinks">
+                <div class="sidebarCategory"onclick="changeContent(this)">
+                    <a href="/summary.html">
+                        <div class="sidebarLink">
+                            <img src="/assets/img/Icons_summary.png">
+                            <div class="sidebarMenuText">Summary</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="sidebarCategory" onclick="changeContent(this)">
+                      <a href="/add_task.html">
+                        <div class="sidebarLink">
+                            <img src="/assets/img/Icons_add_task.png">
+                            <div class="sidebarMenuText">Add Task</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="sidebarCategory"onclick="changeContent(this)">
+                      <a href="/summary.html">
+                        <div class="sidebarLink">
+                            <img src="/assets/img/Icons_board.png">
+                            <div class="sidebarMenuText">Borard</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="sidebarCategory"onclick="changeContent(this)">
+                      <a href="/summary.html">
+                        <div class="sidebarLink">
+                            <img src="/assets/img/Icons_contacts.png">
+                            <div class="sidebarMenuText">Contacts</div>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="sidebarCategory"onclick="changeContent(this)">
-                  <a href="/summary.html">
-                    <div class="sidebarLink">
-                        <img src="/assets/img/Icons_board.png">
-                        <div class="sidebarMenuText">Borard</div>
-                    </div>
-                </a>
+            <!-- Datenschutz -->
+            <div class="privacy">
+                <div class="dataProtection"><a href="#">Privacy Polivy</a></div>
+                <div class="dataProtection">Legal notice</div>
             </div>
-            <div class="sidebarCategory"onclick="changeContent(this)">
-                  <a href="/summary.html">
-                    <div class="sidebarLink">
-                        <img src="/assets/img/Icons_contacts.png">
-                        <div class="sidebarMenuText">Contacts</div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <!-- Datenschutz -->
-        <div class="privacy">
-            <div class="dataProtection"><a href="#">Privacy Polivy</a></div>
-            <div class="dataProtection">Legal notice</div>
         </div>
     </div>
