--- a/styles/header.css
+++ b/styles/header.css
@@ -14,7 +14,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: "Inter";
+  font-family: 'Inter';
   background: #fff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
 }
