--- a/board.css
+++ b/board.css
@@ -1,5 +1,6 @@
 .cardA{
-    display: flex;
+height: 225px;
+display: flex;
 width: 252px;
 padding: 16px;
 flex-direction: column;
@@ -8,7 +9,5 @@ align-items: center;
 gap: 10px;
 border-radius: 24px;
 background: var(--white, #FFF);
-
-/* shadoe backlog box */
 box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
 }
