--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,10 +1,6 @@
 * {
     margin: 0;
-<<<<<<< HEAD
-    box-sizing: border-box;
-=======
     font-family: 'Inter' !important;
->>>>>>> 45603b52e2982cf5e6ce48da62af2ab42a780c34
 }
 
 
@@ -17,72 +13,38 @@
     --sideHeight: 100vh;
     --fonSiz16: 16px;
 }
-.box-sizing {
-    
+.box-sizing{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 232px;
+    background: var(--sidebarBgColor);
+    z-index: 999;
 }
 .sidebar {
-    background: var(--sidebarBgColor);
+    width: 100%;
+    height: calc(100vh - 96px);
+    padding: 64px 0;
     display: flex;
-    width: 232px;
-    height: 100vh;
-    padding: 64px 0px;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    z-index: 2;
-    position: fixed;
     
 }
-
-.sidebarLinks {
+.sidbarLogo {
     display: flex;
-    flex-direction: column;
+    width: 100%;
     justify-content: center;
-    align-items: flex-start;
-    gap: 15px;
+    align-items: center;
 }
 
-.sidebarCategory {
+
+
+.sidebarCategory{
     display: flex;
     width: 232px;
     height: 46px;
     padding: 8px 56px;
     align-items: center;
     gap: 8px;
-}
-.sidebarCategory a {
-    text-decoration: none;
-    color: var(--textColor);
-    display: flex;
-    align-items: center;
-}
-
-.sidebarCategory:hover {
-    background: var(--sidbarlinkHover);
-    
-}
-.sidebarLink {
-    display: flex;
-    gap: 8px;
-}
-
-.sidebarMenuText {
-    display: flex;
-    align-items: center;
-    font-size: var(--fonSiz16);
-}
-.privacy {
-    width: 100%;
-    height: 320px;
-    display: flex;
-    padding: 243px 0px 0px;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 4px;
-    align-self: stretch;
-    gap: 15px;
-}
-.dataProtection {
-    color:var(--textColor);
 }
