File directory summary adjusted

--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -10,7 +10,7 @@
                 <div class="sidebarCategory"onclick="changeContent(this)">
                     <a href="./summary.html">
                         <div class="sidebarLink">
-                            <img src="/assets/img/Icons_summary.png">
+                            <img src="./assets/img/Icons_summary.png">
                             <div class="sidebarMenuText">Summary</div>
                         </div>
                     </a>
@@ -18,7 +18,7 @@
                 <div class="sidebarCategory" onclick="changeContent(this)">
                       <a href="./add_task.html">
                         <div class="sidebarLink">
-                            <img src="/assets/img/Icons_add_task.png">
+                            <img src="./assets/img/Icons_add_task.png">
                             <div class="sidebarMenuText">Add Task</div>
                         </div>
                     </a>
@@ -26,7 +26,7 @@
                 <div class="sidebarCategory"onclick="changeContent(this)">
                       <a href="./summary.html">
                         <div class="sidebarLink">
-                            <img src="/assets/img/Icons_board.png">
+                            <img src="./assets/img/Icons_board.png">
                             <div class="sidebarMenuText">Borard</div>
                         </div>
                     </a>
@@ -34,7 +34,7 @@
                 <div class="sidebarCategory"onclick="changeContent(this)">
                       <a href="./summary.html">
                         <div class="sidebarLink">
-                            <img src="/assets/img/Icons_contacts.png">
+                            <img src="./assets/img/Icons_contacts.png">
                             <div class="sidebarMenuText">Contacts</div>
                         </div>
                     </a>
