summary.js-summary.html-board.html-and-js

--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -24,7 +24,7 @@
                     </a>
                 </div>
                 <div class="sidebarCategory"onclick="changeContent(this)">
-                      <a href="./summary.html">
+                      <a href="../../board.html">
                         <div class="sidebarLink">
                             <img src="./assets/img/Icons_board.png">
                             <div class="sidebarMenuText">Borard</div>
