--- a/styles/loginpage.css
+++ b/styles/loginpage.css
@@ -10,7 +10,7 @@
 
 body {
   background-color: rgb(246, 247, 248);
-  font-family: "Inter";
+  font-family: 'Inter', sans-serif;
 }
 
 .animationJoinLogo {
