--- a/styles/board.css
+++ b/styles/board.css
@@ -28,7 +28,6 @@
 
 /* tasBoard */
 .taskAria {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 0px 64px;
@@ -41,37 +40,54 @@
 }
 
 .taskBoardTtle {
-    width: 244px;
-}
-.todoHeadline{
-    margin-bottom: 15.5px;
-}
-.todoHeadline {
-    height: 24px;
+    max-width: 252px;
+    height: 648px;
+    gap: 16px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
-    flex: 1 0 0;
-    align-self: stretch;
 }
 
 
 
+.headLineCss {
+    display: flex;
+    max-width: 252px;
+    justify-content: space-between;
+    margin-bottom: 7.5px;
+    display: flex;
+    max-width: 252px;
+    justify-content: space-between;
+    margin-bottom: 7.5px;
+    height: 40px;
 
+}
 
-
+.headLineCss a {
+    display: flex;
+    width: 24px;
+    height: 24px;
+    padding: 3px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    border: 2px solid var(--Version-2-main-color, #2A3647);
+}
 
 .cardA {
-    height: 225px;
     display: flex;
     width: 252px;
     padding: 16px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 30px;
+    border: 2px solid var(--Version-2-main-color, #2A3647);
     border-radius: 24px;
     background: var(--white, #FFF);
+    box-sizing: border-box;
+    /* shadoe backlog box */
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
+
 }
